@@ -1,0 +1,1 @@
+Testing program emulating tool which is configurable using GRPC communication channel when running as an external service.
